<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.dalydev.dogbreeding.AddActivity"
    tools:showIn="@layout/activity_add">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lethaboLogo1"
        android:src="@drawable/lethabogsd_logo1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/logo" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/enterName"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/genderLabel"
        android:maxLength="20"
        android:hint="Rover"
        android:layout_alignStart="@+id/datePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Name"
        android:id="@+id/nameLabel"
        android:layout_alignBaseline="@+id/enterName"
        android:layout_alignBottom="@+id/enterName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Gender"
        android:id="@+id/genderLabel"
        android:layout_below="@+id/lethaboLogo1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genderSelection"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignBottom="@+id/genderLabel"
        android:layout_alignStart="@+id/enterName">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:id="@+id/radioButtonMale"
            android:checked="true"
            android:layout_gravity="right" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Female"
            android:id="@+id/radioButtonFemale"
            android:layout_gravity="right|center_horizontal"
            android:checked="false" />

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/DateofBirth"
        android:id="@+id/DoBLabel"
        android:layout_alignTop="@+id/datePicker"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:id="@+id/saveButton"
        android:onClick="SaveDogButtonPressed"
        android:layout_below="@+id/photoButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Photo"
        android:id="@+id/photoButton"
        android:layout_below="@+id/datePicker"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/ChipNum"
        android:id="@+id/chipNum"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/DoBLabel" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enterChip"
        android:maxLength="15"
        android:hint="100000000000000"
        android:layout_below="@+id/enterName"
        android:layout_alignStart="@+id/enterName"
        android:layout_alignEnd="@+id/datePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dalyDev"
        android:id="@+id/dalyDev"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageView" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_below="@+id/enterChip"
        android:layout_toEndOf="@+id/photoButton" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:src="@drawable/default_tumbnail"
        android:layout_alignTop="@+id/photoButton"
        android:layout_alignStart="@+id/datePicker"
        android:layout_alignEnd="@+id/datePicker" />


</RelativeLayout>
</ScrollView>
