<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.dalydev.dogbreeding.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lethaboLogo1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/lethabogsd_logo1"
        android:layout_alignParentEnd="true"
        android:contextClickable="false"
        android:contentDescription="@string/logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/lethaboLogo1"
        android:layout_alignParentStart="false"
        android:layout_marginTop="74dp"
        android:clickable="true"
        android:onClick="goAddScreen"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showButton"
        android:id="@+id/buttonShow"
        android:clickable="true"
        android:textAlignment="center"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:onClick="goDisplayScreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dalyDev"
        android:id="@+id/dalyDev"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
